[BACKLOG-11591] Fixed issue with filter icon overlapping text of leaf node.

--- a/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/themes/public/themes/sapphire/globalSapphire.css
+++ b/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/themes/public/themes/sapphire/globalSapphire.css
@@ -2224,8 +2224,8 @@ body.IE>table {
 }
 
 .treenode-leaf-label {
-  margin-left: 17px;
-  padding-left: 6px;
+  margin-left: 16px;
+  padding-left: 16px;
   height: 24px;
   line-height: 24px;
 }
@@ -2242,7 +2242,7 @@ body.IE>table {
 .fieldlist-filtered-field {
   background-image: url('../images/filter_sm.png');
   background-repeat: no-repeat;
-  background-position: 2px 2px;
+  background-position: 2px 6px;
 }
 
 .dragDropAvatar {
